# AgentArchitect

./: .gitignore  CLAUDE.md  Dockerfile.dashboard  INSTALL.md  README.md  TODOS.md  build_v4.py  dashboard-data.json  dashboard-skills-compact.json  dashboard-skills.json  dashboard.html  docker-compose.yml  fix_template.py  package-lock.json  package.json  wharfside_budget_analysis.py
Architect/: FUTURE_MANAGED_AGENTS.md  PROJECT_OPENCLAW_MIGRATION.md  PROJECT_STARTER_KIT.md  SKILL.md  TUNING_4_7_PLAN.md  config.json
cowork/: ROUTING.md  rag-chrome-bridge.md  rag-client-fts.py  rag-client-local.py  rag-client.py
docs/: factory-model.md  gatekeeper-deployment.md  migrating-from-openclaw.md
mcp-servers/: .env.example  .gitignore  README.md  assignments.json  docker-compose.yml
projects/flagship-people-counter/: README.md  pyproject.toml  requirements.txt
projects/flagship-people-counter/configs/: flagship_entrance.yaml
projects/flagship-people-counter/counter/: __init__.py  analytics.py  cli.py  config.py  depth_source.py  detection.py  fusion.py  line_counter.py  pipeline.py  tracking.py
projects/flagship-people-counter/docs/: 01-system-design.md  02-hardware-reference-build.md  03-build-vs-buy-roadmap.md
projects/flagship-people-counter/tests/: test_detection.py  test_fusion.py  test_line_counter.py  test_pipeline_demo.py  test_tracking.py
prompts/: agentarchitect-factory-model-fable5.md
registry/: agents.json  buckets.json  projects.json  teams.json  workspaces.json
reports/: april-bulletin-research_2026-03-31_working.md  (+5 more)
scripts/: build-fts-db.py  (+23 more)
(+1030 files in other folders)
