[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flagship-people-counter"
version = "0.1.0"
description = "3D stereo-vision overhead people counter for wide retail entrances"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
people-counter = "counter.cli:main"

[tool.setuptools]
packages = ["counter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
